[ issue #102 ] Removed UseSplitVerifier option from Surefire command line